Refactorizando el codigo para produccion.

--- a/InternetBankingApp/Views/Administrator/ManageProducts.cshtml
+++ b/InternetBankingApp/Views/Administrator/ManageProducts.cshtml
@@ -1,4 +1,4 @@
 ﻿@model string
 
 <a asp-route-userId="@Model" asp-controller="Customer" asp-action="AddProduct" asp-route-userId="@Model" class="btn text-white" style="background: #023e8a">Agregar Producto</a>
-<a asp-route-userId="@Model" asp-controller="Customer" asp-action="DeleteProduct" asp-route-userId="@Model" class="btn text-white" style="background: #113b4a">Eliminar Producto</a>
+<a asp-route-userId="@Model" asp-controller="Customer" asp-action="DeleteProduct" asp-route-userId="@Model" class="btn text-white" style="background: #d00000">Eliminar Producto</a>
