--- a/InternetBankingApp/Views/Customer/DeleteProduct.cshtml
+++ b/InternetBankingApp/Views/Customer/DeleteProduct.cshtml
@@ -14,8 +14,8 @@
             <form method="post">
                 <div class="justify-content-center">
                     <div class="col-auto">
-                        <div class="card-header bg-dark">
-                            <h3 class="text-white"><strong>Cuentas</strong></h3>
+                        <div class="card-header text-center" style="background: #023e8a">
+                            <h6 class="text-white"><strong>Cuentas</strong></h6>
                         </div>
                         <table class="table table-striped table-bordered table-list mb-5" style="background-color: #ffffff">
                             <thead class="text-center">
@@ -35,7 +35,7 @@
                                         <td align="center">
                                             @if (!item.Main)
                                             {
-                                                <button type="submit" asp-route-identifier="@item.Identifier" asp-route-type="@EProducts.CuentaDeAhorro" asp-controller="Customer" asp-action="DeleteProduct" style="background-color: red"><i class="fa-solid fa-pen-to-square"></i></button>
+                                                <button type="submit" asp-route-identifier="@item.Identifier" asp-route-type="@EProducts.CuentaDeAhorro" asp-route-userId="@ViewBag.Id" asp-controller="Customer" asp-action="EliminarProducto" class=" btn bg-danger text-white"><i class="fa-solid fa-delete-left"></i></button>
                                             }
                                             else
                                             {
@@ -48,8 +48,8 @@
                             }
                         </table>
 
-                        <div class="card-header bg-dark">
-                            <h3 class="text-white"><strong>Tarjetas</strong></h3>
+                        <div class="card-header text-center" style="background: #023e8a">
+                            <h6 class="text-white"><strong>Tarjetas</strong></h6>
                         </div>
                         <table class="table table-striped table-bordered table-list mb-5" style="background-color: #ffffff">
                             <thead class="text-center">
@@ -71,7 +71,7 @@
                                         <td align="center">
                                             @if (item.Debt <= 0)
                                             {
-                                                <button type="submit" asp-route-identifier="@item.Identifier" asp-route-type="@EProducts.TarjetaDeCredito" asp-controller="Customer" asp-action="DeleteProduct" style="background-color: red"><i class="fa-solid fa-pen-to-square"></i></button>
+                                                <button type="submit" asp-route-identifier="@item.Identifier" asp-route-type="@EProducts.TarjetaDeCredito" asp-route-userId="@ViewBag.Id" asp-controller="Customer" asp-action="EliminarProducto" class="btn bg-danger text-white"><i class="fa-solid fa-delete-left"></i></button>
                                             }
                                             else
                                             {
@@ -84,8 +84,8 @@
                             }
                         </table>
 
-                        <div class="card-header bg-dark">
-                            <h3 class="text-white"><strong>Prestamos</strong></h3>
+                        <div class="card-header text-center" style="background: #023e8a">
+                            <h6 class="text-white"><strong>Prestamos</strong></h6>
                         </div>
                         <table class="table table-striped table-bordered table-list" style="background-color: #ffffff">
                             <thead class="text-center">
@@ -107,11 +107,11 @@
                                         <td align="center">
                                             @if (item.CurrentDebt <= 0)
                                             {
-                                                <button type="submit" asp-route-identifier="@item.Identifier" asp-route-type="@EProducts.Prestamo" asp-controller="Customer" asp-action="DeleteProduct" style="background-color: red"><i class="fa-solid fa-pen-to-square"></i></button>
+                                                <button type="submit" asp-route-identifier="@item.Identifier" asp-route-type="@EProducts.Prestamo" asp-route-userId="@ViewBag.Id" asp-controller="Customer" asp-action="EliminarProducto" class="btn bg-danger text-white"><i class="fa-solid fa-delete-left"></i></button>
                                             }
                                             else
                                             {
-                                                <i class="fa-solid fa-pen-to-square"></i>
+                                                <i class="fa-solid fa-delete-left"></i>
                                             }
 
                                         </td>
