--- a/InternetBankingApp/Views/Customer/PagoTarjetaCredito.cshtml
+++ b/InternetBankingApp/Views/Customer/PagoTarjetaCredito.cshtml
@@ -35,10 +35,10 @@
                         <div class="mb-3">
                             <label asp-for="ProductDestinoIde">Tajertas Creditos</label>
                             <select asp-for="ProductDestinoIde" class="form-select">
-                                @if (ViewBag.creditos != null)
+                                @if (ViewBag.tarjetas != null)
                                 {
                                     <option value="0">Seleciona una tarjeta</option>
-                                    @foreach (var tarjetaCredito in ViewBag.creditos)
+                                    @foreach (var tarjetaCredito in ViewBag.tarjetas)
                                     {
                                         <option value="@tarjetaCredito.Id">@tarjetaCredito.Identifier</option>
                                     }
@@ -50,20 +50,12 @@
                         <div class="mb-3">
                             <label asp-for="ProductOrigenIde">Cuentas</label>
                             <select asp-for="ProductOrigenIde" class="form-select">
-                                @if (ViewBag.products != null)
+                                @if (ViewBag.cuentas != null)
                                 {
                                     <option value="0">Seleciona una cuenta</option>
-                                    @foreach (var product in ViewBag.products)
+                                    @foreach (var cuenta in ViewBag.cuentas)
                                     {
-                                        <option value="@product.Id">@product.Identifier</option>
-                                    }
-                                    @foreach (var product in ViewBag.productsCredito)
-                                    {
-                                        <option value="@product.Id">@product.Identifier</option>
-                                    }
-                                    @foreach (var product in ViewBag.productsPrestamo)
-                                    {
-                                        <option value="@product.Id">@product.Identifier</option>
+                                        <option value="@cuenta.Id">@cuenta.Identifier</option>
                                     }
                                 }
                             </select>
